# rust-belt-rust-tide

./: .env  Cargo.toml
migrations/2019-07-10-004404_create_article/: up.sql
migrations/2019-07-10-172534_create_article/: up.sql
migrations/2019-08-04-154723_create_user/: up.sql
src/: auth.rs  main.rs  schema.rs
src/database/: articles.rs  mod.rs
src/models/: article.rs  user.rs
src/routes/: article.rs  auth.rs  middleware.rs  mod.rs  user.rs
