[package]
name = "tide-workshop"
version = "0.1.0"
authors = ["Martin Asquino <martin.asquino@gmail.com> & Santiago Pastorino <spastorino@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.14.1"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
tide = { git = "https://github.com/rustasync/tide" }

[patch.crates-io]
http-service = { git = "https://github.com/rustasync/http-service" }
http-service-hyper = { git = "https://github.com/rustasync/http-service" }
