[package]
name = "tide-workshop"
version = "0.1.0"
authors = ["Martin Asquino <martin.asquino@gmail.com> & Santiago Pastorino <spastorino@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
tide = { git = "https://github.com/rustasync/tide" }
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.14.1"

[patch.crates-io]
http-service = { git = "https://github.com/rustasync/http-service" }
http-service-hyper = { git = "https://github.com/rustasync/http-service" }
# http-service-mock = { git = "https://github.com/rustasync/http-service" }
